# uidom

./: .gitignore  main.py  mise.toml  pyproject.toml
src/uidom/front/: __init__.py
src/uidom/front/drivers/gtk/: __init__.py  driver.py  realize_application.py  realize_children.py
src/uidom/front/layouts/: column.py  grid.py  layout.py
src/uidom/front/widgets/: application.py  button.py  string_display.py  widget.py  window.py
src/uidom/model/: __init__.py  application.py  layouts.py  positions.py  style.py  utils.py  widgets.py  window.py
src/uidom/model/utils/: __init__.py  center.py  objrefkey.py  position.py  print.py  size.py  sparse_attribute.py  strcanvas.py  style.py  visit.py
tests/: conftest.py
tests/front/: conftest.py
tests/front/drivers/gtk/: conftest.py  test_button_realization.py  test_dom_realization.py  test_layout_realization.py  test_string_display_realization.py  test_window_realization.py
tests/front/drivers/gtk/features/: button_realization.feature  dom_realization.feature  layout_realization.feature  string_display_realization.feature  window_realization.feature
tests/model/: test_visit.py
tests/model/features/: visit.feature
tests/model/utils/: test_print_button_layout.py  test_print_layout.py
tests/model/utils/features/: print_button_layout.feature  print_window_layout.feature
